templates/css/style.css
/* Global Styles
   ========================================================================== */
body {
    font-color: #1d1d1d;
    font-family: 'Roboto', sans-serif;
}
.wrapper {
    max-width: 1250px;
    margin: 0 auto;
    display:block;
}

h1 {
    font-size: 200%;
    display: block;
    margin:0;
    margin-bottom: 20px;
}

h2 {
    font-size: 200%;
    display: block;
}

a {
    text-decoration: none;
    color: #2891cd;
}

p {
    line-height: 150%;
}

/* Header
   ========================================================================== */
header, footer {
    background-color: #1d1d1d;
    color:#fff;
    line-height: 50px;
    
}

header h1 {
    margin: 0;
    white-space: nowrap;
}

header a, footer a {
    color: #FFF;
    text-decoration: none;
}

footer {
    padding: 50px 0;
}
footer p {
    margin: 0;
    text-align: center;
}


/*
    Navigation
    ===================
*/
nav ul {
    padding: 0;
    list-style: none;
    margin: 0 20px;
    display: flex;
    flex-wrap: wrap;
    align_items: baseline;
}
.nav_right {
    margin-left: auto;
}
nav ul li {
    margin-right: 20px;
}
nav ul li a {
    display: block;
    padding: 0 10px;
}
nav li:first-child a {
    padding-left: 0;
}
nav li:last-child a {
    padding-right: 0;
}
nav a:hover {
    text-decoration: none;
}

/* Medium screens */
@media all and (max-width: 800px) {
    nav ul {
        /* When on medium sized screens, we center it by evenly distributing empty space around items */
        justify-content: flex-start;
    }
}

/* Small screens */
@media all and (max-width: 500px) {
    nav ul {
        /* On small screens, we are no longer using row direction but column */
        flex-direction: column;
    }
    nav ul li {
        margin-right: 0;
        text-align: center;
    }
    nav li:first-child a {
        padding-left: 10px;
    }
    nav li:last-child a {
        padding-right: 10px;
    }
    nav a {
        display: block;
    }
    nav input {
        width: 100%;
    }
    nav button {
        width: 100%;
    }
    .nav_right {
        margin-left: 0;
    }
}

/*
    Index page
    ===================
*/
#posts {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: stretch;
}

#posts section {
    flex-basis: 33%;
    min-width: 300px;
    flex-grow: 2;
    padding: 10px;
    box-sizing: border-box;
    display: block;
}

#posts section:first-child {
    flex-basis: 100%;
    flex-grow:2;
}

/*
    Single Page
    ===================
*/
#singlePost {
    padding: 20px;
    box-sizing: border-box;
}

/*
    Archive
    ===================
*/
#archive {
    padding: 20px;
    box-sizing: border-box;
}

#archive ul {
    list-style: none;
    margin: 0;
    padding: 0;
    line-height: 150%;
    font-size: 125%;
}

#archive .date {
    min-width: 150px;
    display: inline-block;
}

@media all and (max-width: 500px) {
    #archive .date {
        min-width: 0;
        display: block;
    }
    
    #archive a {
        display: block;
    }
}

